fix: semantic spacing custom medias

--- a/packages/css/src/less/addons/_spacing-utilities.less
+++ b/packages/css/src/less/addons/_spacing-utilities.less
@@ -38,12 +38,12 @@
   padding-top: @spacing-3-mobile;
   padding-bottom: @spacing-3-mobile;
 
-  @media (min-width: @screen-sm-min) {
+  @media (--screen-sm) {
     padding-top: @spacing-3-tablet;
     padding-bottom: @spacing-3-tablet;
   }
 
-  @media (min-width: @screen-lg-min) {
+  @media (--screen-lg) {
     padding-top: @spacing-3-desktop;
     padding-bottom: @spacing-3-desktop;
   }
@@ -52,11 +52,11 @@
 .footer {
   padding-top: @spacing-1-mobile;
 
-  @media (min-width: @screen-sm-min) {
+  @media (--screen-sm) {
     padding-top: @spacing-1-tablet;
   }
 
-  @media (min-width: @screen-lg-min) {
+  @media (--screen-lg) {
     padding-top: @spacing-1-desktop;
   }
 }
